tests/baselines/reference/parser_breakNotInIterationOrSwitchStatement1.errors.txt
==== tests/cases/compiler/parser_breakNotInIterationOrSwitchStatement1.ts (1 errors) ====
    break;
    ~~~~~~
!!! parser_breakNotInIterationOrSwitchStatement1.ts(1,1): error TS1105: 'break' statement can only be used within an enclosing iteration or switch statement.